--- a/.config/i3/config
+++ b/.config/i3/config
@@ -33,7 +33,7 @@ bindsym $mod+Return exec kitty
 # bindsym $mod+KP_Enter exec kitty
 
 bindsym $mod+shift+q kill
-bindsym $mod+d exec --no-startup-id rofi -show drun
+bindsym $mod+c exec --no-startup-id rofi -show drun
 
 # change focus
 bindsym $mod+h focus left
@@ -46,6 +46,10 @@ bindsym $mod+Left focus left
 bindsym $mod+Down focus down
 bindsym $mod+Up focus up
 bindsym $mod+Right focus right
+bindsym $mod+a focus left
+bindsym $mod+s focus down
+bindsym $mod+w focus up
+bindsym $mod+d focus right
 
 # move focused window
 bindsym $mod+Shift+h move left
@@ -58,6 +62,10 @@ bindsym $mod+Shift+Left move left
 bindsym $mod+Shift+Down move down
 bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
+bindsym $mod+Shift+a move left
+bindsym $mod+Shift+s move down
+bindsym $mod+Shift+w move up
+bindsym $mod+Shift+d move right
 
 # split in horizontal orientation
 bindsym $mod+semicolon split h
@@ -70,7 +78,7 @@ bindsym $mod+f fullscreen toggle
 
 # change container layout (stacked, tabbed, toggle split)
 # bindsym $mod+s layout stacking
-bindsym $mod+w layout tabbed
+bindsym $mod+t layout tabbed
 bindsym $mod+e layout toggle split
 
 # toggle tiling / floating
