--- a/.config/i3/workspace.conf
+++ b/.config/i3/workspace.conf
@@ -1,21 +1,27 @@
 set $fm HDMI-A-0
 set $sm eDP
+set $modc Mod1+Ctrl
 
-bindsym Mod4+Left focus output $fm
-bindsym Mod4+h focus output $fm
+bindsym $modc+Left focus output $fm
+bindsym $modc+h focus output $fm
+bindsym $modc+a focus output $fm
 # OR
-# bindsym Mod4+h focus output left
+# bindsym $modc+h focus output left
 
-bindsym Mod4+Right focus output $sm
-bindsym Mod4+l focus output $sm
+bindsym $modc+Right focus output $sm
+bindsym $modc+l focus output $sm
+bindsym $modc+d focus output $sm
 # OR
-# bindsym Mod4+h focus output right
+# bindsym $modc+h focus output right
 
-bindsym Mod4+Shift+Left move container to output $fm
-bindsym Mod4+Shift+Right move container to output $sm
+bindsym $modc+Shift+Left move container to output $fm
+bindsym $modc+Shift+Right move container to output $sm
 
-bindsym Mod4+Shift+h move container to output $fm
-bindsym Mod4+Shift+l move container to output $sm
+bindsym $modc+Shift+h move container to output $fm
+bindsym $modc+Shift+l move container to output $sm
+
+bindsym $modc+Shift+a move container to output $fm
+bindsym $modc+Shift+d move container to output $sm
 
 workspace 1 output $fm
 workspace 2 output $fm
@@ -70,15 +76,15 @@ bindsym $mod+7 workspace number $ws7
 bindsym $mod+8 workspace number $ws8
 bindsym $mod+9 workspace number $ws9
 
-bindsym Mod4+1 workspace number $ws11
-bindsym Mod4+2 workspace number $ws12
-bindsym Mod4+3 workspace number $ws13
-bindsym Mod4+4 workspace number $ws14
-bindsym Mod4+5 workspace number $ws15
-bindsym Mod4+6 workspace number $ws16
-bindsym Mod4+7 workspace number $ws17
-bindsym Mod4+8 workspace number $ws18
-bindsym Mod4+9 workspace number $ws19
+bindsym $modc+1 workspace number $ws11
+bindsym $modc+2 workspace number $ws12
+bindsym $modc+3 workspace number $ws13
+bindsym $modc+4 workspace number $ws14
+bindsym $modc+5 workspace number $ws15
+bindsym $modc+6 workspace number $ws16
+bindsym $modc+7 workspace number $ws17
+bindsym $modc+8 workspace number $ws18
+bindsym $modc+9 workspace number $ws19
 
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace number $ws1
@@ -92,12 +98,12 @@ bindsym $mod+Shift+8 move container to workspace number $ws8
 bindsym $mod+Shift+9 move container to workspace number $ws9
 bindsym $mod+Shift+0 move container to workspace number $ws10
 
-bindsym Mod4+Shift+1 move container to workspace number $ws11
-bindsym Mod4+Shift+2 move container to workspace number $ws12
-bindsym Mod4+Shift+3 move container to workspace number $ws13
-bindsym Mod4+Shift+4 move container to workspace number $ws14
-bindsym Mod4+Shift+5 move container to workspace number $ws15
-bindsym Mod4+Shift+6 move container to workspace number $ws16
-bindsym Mod4+Shift+7 move container to workspace number $ws17
-bindsym Mod4+Shift+8 move container to workspace number $ws18
-bindsym Mod4+Shift+9 move container to workspace number $ws19
+bindsym $modc+Shift+1 move container to workspace number $ws11
+bindsym $modc+Shift+2 move container to workspace number $ws12
+bindsym $modc+Shift+3 move container to workspace number $ws13
+bindsym $modc+Shift+4 move container to workspace number $ws14
+bindsym $modc+Shift+5 move container to workspace number $ws15
+bindsym $modc+Shift+6 move container to workspace number $ws16
+bindsym $modc+Shift+7 move container to workspace number $ws17
+bindsym $modc+Shift+8 move container to workspace number $ws18
+bindsym $modc+Shift+9 move container to workspace number $ws19
