--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -8,10 +8,10 @@ italic_font      auto
 bold_italic_font auto
 
 font_size 9.5
-# font_size 10
+# font_size 10.5
 
-modify_font cell_width 100%
-modify_font cell_height 1.5px
+# modify_font cell_width 100%
+modify_font cell_height 1.75px
 # modify_font baseline 3
 
 shell_integration  no-cursor 
