--- a/.config/i3/config
+++ b/.config/i3/config
@@ -30,7 +30,7 @@ floating_modifier $mod
 
 #bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Return exec kitty
-# bindsym $mod+KP_Enter exec kitty
+bindsym $mod+KP_Enter exec kitty
 
 bindsym $mod+shift+q kill
 bindsym $mod+c exec --no-startup-id rofi -show drun
@@ -118,11 +118,20 @@ exec --no-startup-id ~/.screenlayout/main.sh
 # exec --no-startup-id feh --bg-fill ~/custom/wallpaper/wall.png
 exec --no-startup-id nitrogen --restore
 
-bindsym Mod4+0 exec "lock && sleep 1 && systemctl suspend"
+# bindsym Mod4+0 exec "lock && sleep 1 && systemctl suspend"
 bindsym Mod4+Shift+0 exec "lock && systemctl hibernate"
 bindsym Mod4+p exec "lock"
-bindsym Print exec gnome-screenshot
-bindsym $mod+Print exec gnome-screenshot -i
+
+## Screenshots
+bindsym Print exec --no-startup-id maim "/home/$USER/Pictures/$(date).png"
+bindsym $mod+Print exec --no-startup-id maim --window $(xdotool getactivewindow) "/home/$USER/Pictures/$(date).png"
+bindsym Shift+Print exec --no-startup-id maim --select --quality 10 --hidecursor --format=png "/home/$USER/Pictures/$(date).png"
+
+## Clipboard Screenshots
+bindsym Ctrl+Print exec --no-startup-id maim | xclip -selection clipboard -t image/png
+bindsym Ctrl+$mod+Print exec --no-startup-id maim --window $(xdotool getactivewindow) | xclip -selection clipboard -t image/png
+# bindsym Ctrl+Shift+Print exec --no-startup-id maim --select | xclip -selection clipboard -t image/png
+bindsym Ctrl+Shift+Print exec --no-startup-id maim --select --quality 10 --hidecursor --format=jpg | xclip -selection clipboard -t image/png
 
 
 set $yellow #fabd2f
@@ -135,7 +144,7 @@ set $bg3 #665c54
 bar {
 	font pango:SF Pro Bold 8
 	status_command SCRIPT_DIR=~/.config/i3blocks/scripts/ i3blocks
-		height 22
+		# height 22
 		# height 45
 		tray_output primary
 		# tray_padding -20
@@ -167,3 +176,4 @@ smart_gaps on
 smart_borders on
 
 include ./workspace.conf
+# include ./workspace_2.conf
